Rename and match the metrics name

--- a/stacks/container-apps/augury-alarms.yml
+++ b/stacks/container-apps/augury-alarms.yml
@@ -15,13 +15,13 @@ Parameters:
   AuguryWorkerLogGroupName:
     Type: String
 Resources:
-  AuguryActualsIngestJobInvocationMetric:
+  ActualsIngestJobInvocationMetricFilter:
     Type: "AWS::Logs::MetricFilter"
     Properties:
       FilterPattern: '[ImpressionsFetchJob] Success'
       LogGroupName: !Ref AuguryWorkerLogGroupName
       MetricTransformations:
-        - MetricName: !Sub "AuguryActualsRollupsCount${EnvironmentTypeAbbreviation}"
+        - MetricName: !Sub "ActualsIngestJobInvocationCount${EnvironmentTypeAbbreviation}"
           MetricNamespace: PRX/Augury
           MetricValue: "1"
   AuguryActualsAreBehindAlarm:
@@ -38,7 +38,7 @@ Resources:
       AlarmDescription: Augury actuals are behind
       ComparisonOperator: LessThanThreshold
       EvaluationPeriods: 3
-      MetricName: ActualsIngestJobInvocationMetric
+      MetricName: !Sub "ActualsIngestJobInvocationCount${EnvironmentTypeAbbreviation}"
       Namespace: AWS/ECS
       Period: 300
       Statistic: Sum
