Try json syntax

--- a/stacks/container-apps/augury-alarms.yml
+++ b/stacks/container-apps/augury-alarms.yml
@@ -18,7 +18,7 @@ Resources:
   ActualsIngestJobInvocationMetricFilter:
     Type: "AWS::Logs::MetricFilter"
     Properties:
-      FilterPattern: '[ImpressionsFetchJob] Success'
+      FilterPattern: '{ $.msg = "*Performed ImpressionsFetchJob*" }'
       LogGroupName: !Ref AuguryWorkerLogGroupName
       MetricTransformations:
         - MetricName: !Sub "ActualsIngestJobInvocationCount${EnvironmentTypeAbbreviation}"
