Match the namespace

--- a/stacks/container-apps/augury-alarms.yml
+++ b/stacks/container-apps/augury-alarms.yml
@@ -39,7 +39,7 @@ Resources:
       ComparisonOperator: LessThanThreshold
       EvaluationPeriods: 3
       MetricName: !Sub "ActualsIngestJobInvocationCount${EnvironmentTypeAbbreviation}"
-      Namespace: AWS/ECS
+      Namespace: PRX/Augury
       Period: 300
       Statistic: Sum
       Threshold: 1
