Use the pascal case EnvironmentType var here

--- a/stacks/container-apps/augury-alarms.yml
+++ b/stacks/container-apps/augury-alarms.yml
@@ -21,7 +21,7 @@ Resources:
       FilterPattern: '{ $.msg = "*Performed ImpressionsFetchJob*" }'
       LogGroupName: !Ref AuguryWorkerLogGroupName
       MetricTransformations:
-        - MetricName: !Sub "ActualsIngestJobInvocationCount${EnvironmentTypeAbbreviation}"
+        - MetricName: !Sub "ActualsIngestJobInvocationCount${EnvironmentType}"
           MetricNamespace: PRX/Augury
           MetricValue: "1"
   AuguryActualsAreBehindAlarm:
@@ -38,7 +38,7 @@ Resources:
       AlarmDescription: Augury actuals are behind
       ComparisonOperator: LessThanThreshold
       EvaluationPeriods: 3
-      MetricName: !Sub "ActualsIngestJobInvocationCount${EnvironmentTypeAbbreviation}"
+      MetricName: !Sub "ActualsIngestJobInvocationCount${EnvironmentType}"
       Namespace: PRX/Augury
       Period: 300
       Statistic: Sum
