--- a/dns/prx.org-hosted_zone.yml
+++ b/dns/prx.org-hosted_zone.yml
@@ -609,6 +609,16 @@ Resources:
           AliasTarget:
             DNSName: dwa2z82v27lla.cloudfront.net.
             HostedZoneId: Z2FDTNDATAQYW2
+        - Type: A
+          Name: !Sub blog.${Domain}
+          AliasTarget:
+            DNSName: d1uuj4xcfminz6.cloudfront.net.
+            HostedZoneId: Z2FDTNDATAQYW2
+        - Type: AAAA
+          Name: !Sub blog.${Domain}
+          AliasTarget:
+            DNSName: d1uuj4xcfminz6.cloudfront.net.
+            HostedZoneId: Z2FDTNDATAQYW2
   Prss:
     Type: "AWS::Route53::RecordSetGroup"
     Properties:
@@ -763,11 +773,6 @@ Resources:
           TTL: "300"
           Type: A
           Name: !Sub ballotvox.${Domain}
-        - ResourceRecords:
-            - "199.119.122.230"
-          TTL: "300"
-          Type: A
-          Name: !Sub blog.${Domain}
         - ResourceRecords:
             - "199.119.122.230"
           TTL: "300"
