--- a/dns/publicfeeds.net-hosted_zone.yml
+++ b/dns/publicfeeds.net-hosted_zone.yml
@@ -120,3 +120,7 @@ Resources:
         # Latino USA
         - { Type: A,    Name: !Sub "pf0732lusa.${Domain}", AliasTarget: { DNSName: "d3isv1ihstdgc8.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
         - { Type: AAAA, Name: !Sub "pf0732lusa.${Domain}", AliasTarget: { DNSName: "d3isv1ihstdgc8.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+
+        # We Got You
+        - { Type: A,    Name: !Sub "pf2359wgus.${Domain}", AliasTarget: { DNSName: "dxcg418d54qih.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+        - { Type: AAAA, Name: !Sub "pf2359wgus.${Domain}", AliasTarget: { DNSName: "dxcg418d54qih.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
