Make linter happy

--- a/stacks/container-apps/sphinx-nlb.yml
+++ b/stacks/container-apps/sphinx-nlb.yml
@@ -474,7 +474,7 @@ Resources:
           TargetGroupArn: !Ref NLBSphinxTargetGroup
       # Role: !Ref ECSServiceIAMRole
       NetworkConfiguration:
-        AwsVpcConfiguration:
+        AwsvpcConfiguration:
           SecurityGroups:
             - !Ref SphinxInboundSecurityGroup
             - !Ref SphinxOutboundSecurityGroup
