Cleanup whitespace in parameters

--- a/cd/cd.yml
+++ b/cd/cd.yml
@@ -13,7 +13,8 @@
 # InfrastructureSourceBucket parameter) for that purpose.
 # This would be deployed in any region where you want to deploy the platform
 AWSTemplateFormatVersion: "2010-09-09"
-Description: >
+Transform: AWS::Serverless-2016-10-31
+Description: >-
   Creates CodePipeline to handle infrastructure testing and deploys
 Metadata:
   AWS::CloudFormation::Interface:
@@ -63,24 +64,24 @@ Parameters:
     Description: The name of a previously launched secrets stack
     Type: String
   GitHubToken:
-    Description: >
+    Description: >-
       A GitHub access token with permissions to update statuses, request
       content, etc
     Type: String
   GitHubWebhookSecret:
-    Description: >
+    Description: >-
       A secret used to sign requests made by GitHub to webhook endpoints.
       This secret shared by all webhooks created by this template.
     Type: String
   InfrastructureConfigStagingKey:
     Default: template-config-staging.zip
-    Description: >
+    Description: >-
       The S3 object key for the staging template configuration file archive
       (.zip), inside the InfrastructureConfigBucket
     Type: String
   InfrastructureConfigProductionKey:
     Default: template-config-production.zip
-    Description: >
+    Description: >-
       The S3 object key for the production template configuration file archive
       (.zip), inside the InfrastructureConfigBucket
     Type: String
