Add UpdateRetainPolicy to CD buckets

--- a/cd/cd.yml
+++ b/cd/cd.yml
@@ -362,6 +362,7 @@ Resources:
     # app, infrastructure, or user data.
     Type: AWS::S3::Bucket
     DeletionPolicy: Retain
+    UpdateReplacePolicy: Retain
     Properties:
       LifecycleConfiguration:
         Rules:
@@ -945,6 +946,7 @@ Resources:
   CdPipelineS3TriggerTrailStore:
     Type: AWS::S3::Bucket
     DeletionPolicy: Retain
+    UpdateReplacePolicy: Retain
     Properties:
       LifecycleConfiguration:
         Rules:
