Improve YAML whitespace

--- a/cd/cd.yml
+++ b/cd/cd.yml
@@ -224,7 +224,7 @@ Resources:
       OKActions:
         - Fn::ImportValue:
             !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
-      AlarmDescription: >
+      AlarmDescription: >-
         The error rate on the failure notification lambda has exceeded 0 in
         the last minute.
       ComparisonOperator: GreaterThanThreshold
@@ -266,7 +266,7 @@ Resources:
           Fn::ImportValue:
             !Sub ${InfrastructureStorageStackName}-InfrastructureSupportBucket
         S3Key: cd/pipeline-approval-notification-handler.zip
-      Description: >
+      Description: >-
         Receives notifications from CodePipeline when approval is required, and
         builds a messages to alert externally
       Environment:
@@ -303,7 +303,7 @@ Resources:
       OKActions:
         - Fn::ImportValue:
             !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
-      AlarmDescription: >
+      AlarmDescription: >-
         The error rate on the approval notification handler lambda has exceeded
         0 in the last minute.
       ComparisonOperator: GreaterThanThreshold
@@ -1041,7 +1041,7 @@ Resources:
   CdPipelineS3TriggerEventRule:
     Type: AWS::Events::Rule
     Properties:
-      Description: >
+      Description: >-
         Triggers CD CodePipeline when CloudTrail sees changes in S3 on the
         staging template config
       EventPattern:
@@ -1404,7 +1404,7 @@ Resources:
           Fn::ImportValue:
             !Sub ${InfrastructureStorageStackName}-InfrastructureSupportBucket
         S3Key: cd/change-set-delta-notification.zip
-      Description: >
+      Description: >-
         Sends a message about stack changes in a CodePipeline change set
       Environment:
         Variables:
@@ -1438,7 +1438,7 @@ Resources:
       OKActions:
         - Fn::ImportValue:
             !Sub ${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn
-      AlarmDescription: >
+      AlarmDescription: >-
         The error rate on the diff notification lambda has exceeded 0 in
         the last minute.
       ComparisonOperator: GreaterThanThreshold
@@ -1460,7 +1460,7 @@ Resources:
           Fn::ImportValue:
             !Sub ${InfrastructureStorageStackName}-InfrastructureSupportBucket
         S3Key: cd/deployment-notification.zip
-      Description: >
+      Description: >-
         Sends a message when deployments finish
       Environment:
         Variables:
@@ -1499,7 +1499,7 @@ Resources:
       OKActions:
         - Fn::ImportValue:
             !Sub ${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn
-      AlarmDescription: >
+      AlarmDescription: >-
         The error rate on the deploy notification lambda has exceeded 0 in
         the last minute.
       ComparisonOperator: GreaterThanThreshold
@@ -1521,7 +1521,7 @@ Resources:
           Fn::ImportValue:
             !Sub ${InfrastructureStorageStackName}-InfrastructureSupportBucket
         S3Key: cd/environment-state-capture.zip
-      Description: >
+      Description: >-
         Capture template and config version data for deployed environments
       Environment:
         Variables:
@@ -1558,7 +1558,7 @@ Resources:
       OKActions:
         - Fn::ImportValue:
             !Sub ${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn
-      AlarmDescription: >
+      AlarmDescription: >-
         The error rate on the state capture lambda has exceeded 0 in
         the last minute.
       ComparisonOperator: GreaterThanThreshold
@@ -1580,7 +1580,7 @@ Resources:
           Fn::ImportValue:
             !Sub ${InfrastructureStorageStackName}-InfrastructureSupportBucket
         S3Key: cd/production-config-pseudo-source.zip
-      Description: >
+      Description: >-
         Generates output artifact of the production template config
       Environment:
         Variables:
@@ -1614,7 +1614,7 @@ Resources:
       OKActions:
         - Fn::ImportValue:
             !Sub ${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn
-      AlarmDescription: >
+      AlarmDescription: >-
         The error rate on the pseudo source lambda has exceeded 0 in
         the last minute.
       ComparisonOperator: GreaterThanThreshold
@@ -1668,7 +1668,7 @@ Resources:
       OKActions:
         - Fn::ImportValue:
             !Sub ${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn
-      AlarmDescription: >
+      AlarmDescription: >-
         The error rate on the S3 Sync lambda has exceeded 0 in
         the last minute.
       ComparisonOperator: GreaterThanThreshold
