Remove unnecessary !Sub

--- a/cd/cd.yml
+++ b/cd/cd.yml
@@ -582,7 +582,7 @@ Resources:
                 Version: "1"
               Configuration:
                 FunctionName: !Ref DeploymentNotificationFunction
-                UserParameters: !Sub |
+                UserParameters: |
                   {
                     "stage": "Housekeeping",
                     "info": "start"
@@ -670,7 +670,7 @@ Resources:
                 Version: "1"
               Configuration:
                 FunctionName: !Ref DeploymentNotificationFunction
-                UserParameters: !Sub |
+                UserParameters: |
                   {
                     "stage": "Staging",
                     "info": "complete"
@@ -803,7 +803,7 @@ Resources:
                 Version: "1"
               Configuration:
                 FunctionName: !Ref DeploymentNotificationFunction
-                UserParameters: !Sub |
+                UserParameters: |
                   {
                     "stage": "Production",
                     "info": "complete"
