Remove unnecessary quotes

--- a/cd/cd.yml
+++ b/cd/cd.yml
@@ -244,22 +244,22 @@ Resources:
   # is a subscriber. The function generates an interactive Slack message to
   # facilitate the approval.
   CodePipelineApprovalsSnsTopic:
-    Type: "AWS::SNS::Topic"
+    Type: AWS::SNS::Topic
   CodePipelineApprovalsTopicHandlerFunctionSubscription:
-    Type: "AWS::SNS::Subscription"
+    Type: AWS::SNS::Subscription
     Properties:
       Endpoint: !GetAtt PipelineApprovalNotificationHandlerFunction.Arn
       Protocol: lambda
       TopicArn: !Ref CodePipelineApprovalsSnsTopic
   CodePipelineApprovalsTopicInvokeHandlerFunctionPermission:
-    Type: "AWS::Lambda::Permission"
+    Type: AWS::Lambda::Permission
     Properties:
-      Action: "lambda:InvokeFunction"
+      Action: lambda:InvokeFunction
       FunctionName: !Ref PipelineApprovalNotificationHandlerFunction
       Principal: sns.amazonaws.com
       SourceArn: !Ref CodePipelineApprovalsSnsTopic
   PipelineApprovalNotificationHandlerFunction:
-    Type: "AWS::Lambda::Function"
+    Type: AWS::Lambda::Function
     Properties:
       Code:
         S3Bucket:
@@ -290,7 +290,7 @@ Resources:
           Value: !Ref AWS::StackId
       Timeout: 5
   PipelineApprovalNotificationHandlerErrorAlarm:
-    Type: "AWS::CloudWatch::Alarm"
+    Type: AWS::CloudWatch::Alarm
     Properties:
       ActionsEnabled: true
       AlarmName: "[Infra][CD][Lambda][Error] Pipeline Approval Notification"
