Add log group for pipeline approvals Lambda

--- a/cd/cd.yml
+++ b/cd/cd.yml
@@ -296,6 +296,11 @@ Resources:
         "prx:cloudformation:stack-name": !Ref AWS::StackName
         "prx:cloudformation:stack-id": !Ref AWS::StackId
       Timeout: 5
+  PipelineApprovalNotificationHandlerLogGroup:
+    Type: AWS::Logs::LogGroup
+    Properties:
+      LogGroupName: !Sub /aws/lambda/${PipelineApprovalNotificationHandlerFunction}
+      RetentionInDays: 14
   PipelineApprovalNotificationHandlerErrorAlarm:
     Type: AWS::CloudWatch::Alarm
     Properties:
