Update case on policy resource

--- a/cd/cd.yml
+++ b/cd/cd.yml
@@ -458,7 +458,7 @@ Resources:
                 Action:
                   - iam:PassRole
                 Resource:
-                  - !GetAtt CloudFormationIAMRole.Arn
+                  - !GetAtt CloudFormationIamRole.Arn
               # Full access for staging stacks
               - Effect: Allow
                 Action:
@@ -614,7 +614,7 @@ Resources:
                 ActionMode: CHANGE_SET_REPLACE
                 Capabilities: CAPABILITY_IAM,CAPABILITY_AUTO_EXPAND
                 ChangeSetName: !Sub ${AWS::StackName}RootStagingChangeSet
-                RoleArn: !GetAtt CloudFormationIAMRole.Arn
+                RoleArn: !GetAtt CloudFormationIamRole.Arn
                 StackName: !Sub ${AWS::StackName}-root-staging
                 ParameterOverrides: !Sub |
                   {
@@ -658,7 +658,7 @@ Resources:
                 ActionMode: CHANGE_SET_EXECUTE
                 Capabilities: CAPABILITY_IAM
                 ChangeSetName: !Sub ${AWS::StackName}RootStagingChangeSet
-                RoleArn: !GetAtt CloudFormationIAMRole.Arn
+                RoleArn: !GetAtt CloudFormationIamRole.Arn
                 StackName: !Sub ${AWS::StackName}-root-staging
               RunOrder: 3
             - Name: CaptureStagingState
@@ -738,7 +738,7 @@ Resources:
                     "InfrastructureGitCommit": "#{infrastructure_repo.CommitId}",
                     "PipelineExecutionNonce": "#{codepipeline.PipelineExecutionId}"
                   }
-                RoleArn: !GetAtt CloudFormationIAMRole.Arn
+                RoleArn: !GetAtt CloudFormationIamRole.Arn
                 StackName: !Sub ${AWS::StackName}-root-production
                 TemplateConfiguration: TemplateConfigProductionZipArtifact::production.json
                 TemplatePath: InfrastructureRepoSourceArtifact::stacks/root.yml
@@ -792,7 +792,7 @@ Resources:
                 ActionMode: CHANGE_SET_EXECUTE
                 Capabilities: CAPABILITY_IAM
                 ChangeSetName: !Sub ${AWS::StackName}RootProductionChangeSet
-                RoleArn: !GetAtt CloudFormationIAMRole.Arn
+                RoleArn: !GetAtt CloudFormationIamRole.Arn
                 StackName: !Sub ${AWS::StackName}-root-production
               RunOrder: 4
             - Name: CaptureProductionState
@@ -1129,7 +1129,7 @@ Resources:
           Value: !Ref AWS::StackId
       TimeoutInMinutes: 5
   # CloudFormation Pipeline Actions
-  CloudFormationIAMRole:
+  CloudFormationIamRole:
     # This role gets passed to CloudFormation, and is used by CloudFormation to
     # to perform actions against other AWS resources.
     #
