--- a/cd/cd.yml
+++ b/cd/cd.yml
@@ -1350,13 +1350,9 @@ Resources:
         - Key: "prx:cloudformation:stack-id"
           Value: !Ref AWS::StackId
   ChangeSetDeltaNotificationFunction:
-    Type: AWS::Lambda::Function
+    Type: AWS::Serverless::Function
     Properties:
-      Code:
-        S3Bucket:
-          Fn::ImportValue:
-            !Sub ${InfrastructureStorageStackName}-InfrastructureSupportBucket
-        S3Key: cd/change-set-delta-notification.zip
+      CodeUri: lambdas/change-set-delta-notification/
       Description: >-
         Sends a message about stack changes in a CodePipeline change set
       Environment:
@@ -1368,14 +1364,11 @@ Resources:
       Handler: lambda_function.lambda_handler
       MemorySize: 128
       Role: !GetAtt LambdaExecutionIAMRole.Arn
-      Runtime: python3.6
+      Runtime: python3.8
       Tags:
-        - Key: Project
-          Value: Infrastructure
-        - Key: "prx:cloudformation:stack-name"
-          Value: !Ref AWS::StackName
-        - Key: "prx:cloudformation:stack-id"
-          Value: !Ref AWS::StackId
+        Project: Infrastructure
+        "prx:cloudformation:stack-name": !Ref AWS::StackName
+        "prx:cloudformation:stack-id": !Ref AWS::StackId
       Timeout: 3
   ChangeSetDeltaNotificationNotificationErrorAlarm:
     Type: AWS::CloudWatch::Alarm
@@ -1406,13 +1399,9 @@ Resources:
         - Name: FunctionName
           Value: !Ref ChangeSetDeltaNotificationFunction
   DeploymentNotificationFunction:
-    Type: AWS::Lambda::Function
+    Type: AWS::Serverless::Function
     Properties:
-      Code:
-        S3Bucket:
-          Fn::ImportValue:
-            !Sub ${InfrastructureStorageStackName}-InfrastructureSupportBucket
-        S3Key: cd/deployment-notification.zip
+      CodeUri: lambdas/deployment-notification/
       Description: >-
         Sends a message when deployments finish
       Environment:
@@ -1429,14 +1418,11 @@ Resources:
       Handler: lambda_function.lambda_handler
       MemorySize: 128
       Role: !GetAtt LambdaExecutionIAMRole.Arn
-      Runtime: python3.6
+      Runtime: python3.8
       Tags:
-        - Key: Project
-          Value: Infrastructure
-        - Key: "prx:cloudformation:stack-name"
-          Value: !Ref AWS::StackName
-        - Key: "prx:cloudformation:stack-id"
-          Value: !Ref AWS::StackId
+        Project: Infrastructure
+        "prx:cloudformation:stack-name": !Ref AWS::StackName
+        "prx:cloudformation:stack-id": !Ref AWS::StackId
       Timeout: 3
   DeploymentNotificationErrorAlarm:
     Type: AWS::CloudWatch::Alarm
@@ -1467,13 +1453,9 @@ Resources:
         - Name: FunctionName
           Value: !Ref DeploymentNotificationFunction
   EnvironmentStateCaptureFunction:
-    Type: AWS::Lambda::Function
+    Type: AWS::Serverless::Function
     Properties:
-      Code:
-        S3Bucket:
-          Fn::ImportValue:
-            !Sub ${InfrastructureStorageStackName}-InfrastructureSupportBucket
-        S3Key: cd/environment-state-capture.zip
+      CodeUri: lambdas/environment-state-capture/
       Description: >-
         Capture template and config version data for deployed environments
       Environment:
@@ -1490,12 +1472,9 @@ Resources:
       Role: !GetAtt LambdaExecutionIAMRole.Arn
       Runtime: nodejs12.x
       Tags:
-        - Key: Project
-          Value: Infrastructure
-        - Key: "prx:cloudformation:stack-name"
-          Value: !Ref AWS::StackName
-        - Key: "prx:cloudformation:stack-id"
-          Value: !Ref AWS::StackId
+        Project: Infrastructure
+        "prx:cloudformation:stack-name": !Ref AWS::StackName
+        "prx:cloudformation:stack-id": !Ref AWS::StackId
       Timeout: 5
   EnvironmentStateCaptureErrorAlarm:
     Type: AWS::CloudWatch::Alarm
@@ -1526,13 +1505,9 @@ Resources:
         - Name: FunctionName
           Value: !Ref EnvironmentStateCaptureFunction
   ProductionConfigPseudoSourceFunction:
-    Type: AWS::Lambda::Function
+    Type: AWS::Serverless::Function
     Properties:
-      Code:
-        S3Bucket:
-          Fn::ImportValue:
-            !Sub ${InfrastructureStorageStackName}-InfrastructureSupportBucket
-        S3Key: cd/production-config-pseudo-source.zip
+      CodeUri: lambdas/production-config-pseudo-source/
       Description: >-
         Generates output artifact of the production template config
       Environment:
@@ -1544,14 +1519,11 @@ Resources:
       Handler: lambda_function.lambda_handler
       MemorySize: 256
       Role: !GetAtt LambdaExecutionIAMRole.Arn
-      Runtime: python3.6
+      Runtime: python3.8
       Tags:
-        - Key: Project
-          Value: Infrastructure
-        - Key: "prx:cloudformation:stack-name"
-          Value: !Ref AWS::StackName
-        - Key: "prx:cloudformation:stack-id"
-          Value: !Ref AWS::StackId
+        Project: Infrastructure
+        "prx:cloudformation:stack-name": !Ref AWS::StackName
+        "prx:cloudformation:stack-id": !Ref AWS::StackId
       Timeout: 8
   ProductionConfigPseudoSourceErrorAlarm:
     Type: AWS::CloudWatch::Alarm
@@ -1582,13 +1554,9 @@ Resources:
         - Name: FunctionName
           Value: !Ref ProductionConfigPseudoSourceFunction
   InfrastructureRepoSourceS3SyncFunction:
-    Type: AWS::Lambda::Function
+    Type: AWS::Serverless::Function
     Properties:
-      Code:
-        S3Bucket:
-          Fn::ImportValue:
-            !Sub ${InfrastructureStorageStackName}-InfrastructureSupportBucket
-        S3Key: cd/infrastructure-s3-sync.zip
+      CodeUri: lambdas/infrastructure-s3-sync/
       Description: Copies Infrastructure repo artifact to S3
       Environment:
         Variables:
@@ -1598,14 +1566,11 @@ Resources:
       Handler: lambda_function.lambda_handler
       MemorySize: 256
       Role: !GetAtt LambdaExecutionIAMRole.Arn
-      Runtime: python3.6
+      Runtime: python3.8
       Tags:
-        - Key: Project
-          Value: Infrastructure
-        - Key: "prx:cloudformation:stack-name"
-          Value: !Ref AWS::StackName
-        - Key: "prx:cloudformation:stack-id"
-          Value: !Ref AWS::StackId
+        Project: Infrastructure
+        "prx:cloudformation:stack-name": !Ref AWS::StackName
+        "prx:cloudformation:stack-id": !Ref AWS::StackId
       Timeout: 8
   InfrastructureRepoSourceS3SyncErrorAlarm:
     Type: AWS::CloudWatch::Alarm
